--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@ async function sendOrder() {
 text += `\n💰 Итого: ${total} ₽\n\n`;
 text += `👤 Клиент:\n`;
 text += `Username: @${user?.username || "не указан"}\n`;
-text += `ID: ${user?.id}`;
+text += `🆔 ID: ${user?.id}`;
 
     const response = await fetch("/api/send-order", {
         method: "POST",
