--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@ function changeQty(name, price, delta){
   }
 
     updateCartBar();
+  renderCategoryContent(currentCategory);
 
     const safeName = name.replace(/\s/g, "_");
     const qtyEl = document.getElementById(`qty-${safeName}`);
