--- a/index.html
+++ b/index.html
@@ -663,8 +663,11 @@ function changeQty(name, price, delta){
   }
 
     updateCartBar();
-  openCategory(currentCategory);
+  const safeName = name.replace(/\s/g, "_");
+const qtyEl = document.getElementById(`qty-${safeName}`);
 
+if (qtyEl) {
+    qtyEl.textContent = getQty(name) + " шт.";
 }
 
 
