--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@ button {
 <script>
 
 let cart = [];
+let products = { ... };
 let currentCategory = null;
   const operatorUsername = "budapuff_meneger"; // <-- сюда свой username
   
