--- a/index.html
+++ b/index.html
@@ -691,19 +691,25 @@ function getQty(name){
   return item ? item.qty : 0;
 }
 
-function changeQty(name, price, delta){
-  const existing = cart.find(i => i.name === name);
+function changeQty(name, price, delta) {
 
-  if(existing){
-    existing.qty += delta;
-    if(existing.qty <= 0){
-      cart = cart.filter(i => i.name !== name);
+    const existing = cart.find(i => i.name === name);
+
+    if (existing) {
+        existing.qty += delta;
+
+        if (existing.qty <= 0) {
+            cart = cart.filter(i => i.name !== name);
+        }
+
+    } else if (delta > 0) {
+        cart.push({ name, price, qty: 1 });
     }
-  } else if(delta > 0){
-    cart.push({name, price, qty:1});
-  }
 
     updateCartBar();
+
+    openProduct(currentCategory, name);
+}
 
 const safeName = name.replace(/\s/g, "_");
 const qtyEl = document.getElementById(`qty-${safeName}`);
