--- a/index.html
+++ b/index.html
@@ -707,7 +707,12 @@ function changeQty(name, price, delta) {
     }
 
     updateCartBar();
-    openProduct(currentCategory, name);
+
+const safeName = name.replace(/\s/g, "_");
+const qtyEl = document.getElementById(`qty-${safeName}`);
+
+if (qtyEl) {
+    qtyEl.textContent = getQty(name) + " шт.";
 }
 
 const safeName = name.replace(/\s/g, "_");
