--- a/index.html
+++ b/index.html
@@ -364,16 +364,6 @@ button {
     font-size: 18px;
     cursor: pointer;
 }
-  .bottom-bar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    gap: 10px;
-    padding: 15px;
-    background: #111;
-}
 
 .continue-btn {
     flex: 1;
@@ -412,10 +402,10 @@ button {
   /* ===== ЦЕНА ===== */
 
 .price-box {
-    font-size: 26px;
+    font-size: 28px;
     font-weight: 700;
     color: #ff4d6d;
-    margin-bottom: 20px;
+    margin: 15px 0 25px 0;
 }
 
 .price-box span {
@@ -423,25 +413,6 @@ button {
     opacity: 0.7;
     margin-left: 4px;
 }
-
-
-/* ===== НИЖНЯЯ ПАНЕЛЬ В КАРТОЧКЕ ===== */
-
-.bottom-bar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-
-    display: flex;
-    gap: 12px;
-
-    padding: 15px;
-    background: #111;
-
-    box-shadow: 0 -4px 20px rgba(0,0,0,0.4);
-}
-
 
 /* ===== КНОПКА "ПРОДОЛЖИТЬ" ===== */
 
@@ -504,6 +475,65 @@ button {
     text-align: center;
 
     font-size: 15px;
+    font-weight: 500;
+}
+  /* ===== БЛОК ВНИЗУ КАРТОЧКИ ===== */
+
+.bottom-bar {
+    display: flex;
+    gap: 12px;
+    margin-top: 25px;
+}
+
+/* кнопка продолжить */
+.continue-btn {
+    flex: 1;
+    background: #ff4d6d;
+    border: none;
+    border-radius: 14px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    height: 48px;
+    cursor: pointer;
+    transition: transform 0.15s ease;
+}
+
+.continue-btn:active {
+    transform: scale(0.96);
+}
+
+/* аккуратный мини +/- */
+.mini-qty {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: #2a2a2a;
+    padding: 6px 12px;
+    border-radius: 14px;
+}
+
+.mini-qty button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    border-radius: 8px;
+    background: #ff4d6d;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: transform 0.15s ease;
+}
+
+.mini-qty button:active {
+    transform: scale(0.9);
+}
+
+.mini-qty span {
+    min-width: 40px;
+    text-align: center;
+    font-size: 14px;
     font-weight: 500;
 }
 
@@ -782,20 +812,15 @@ function openProduct(category, productName) {
 </div>
     `;
 
-    if (qty === 0) {
-
-        html += `
-        <button class="add-btn"
-        onclick="changeQty('${product.name}', ${product.price}, 1)">
-        Добавить в корзину
-        </button>
-        `;
-
-    } else {
-
     html += `
-    <div class="bottom-bar">
+<div class="bottom-bar">
 
+    ${qty === 0 ? `
+        <button class="continue-btn"
+            onclick="changeQty('${product.name}', ${product.price}, 1)">
+            Добавить в корзину
+        </button>
+    ` : `
         <button class="continue-btn"
             onclick="renderCart()">
             Продолжить
@@ -816,9 +841,10 @@ function openProduct(category, productName) {
             </button>
 
         </div>
-    </div>
-    `;
-}
+    `}
+    
+</div>
+`;
 
     html += `</div>`;
 
@@ -859,17 +885,11 @@ function changeQty(name, price, delta) {
 
     updateCartBar();
 
-    // Обновляем только количество
     const safeName = name.replace(/\s/g, "_");
     const qtyEl = document.getElementById(`qty-${safeName}`);
 
     if (qtyEl) {
         qtyEl.textContent = getQty(name) + " шт.";
-    }
-
-    // если открыта карточка товара
-    if (document.querySelector(".product-details")) {
-        openProduct(currentCategory, name);
     }
 }
 
