--- a/index.html
+++ b/index.html
@@ -875,8 +875,14 @@ function changeQty(name, price, delta) {
 
     updateCartBar();
 
+    // если открыта карточка товара
     if (document.querySelector(".product-details")) {
         openProduct(currentCategory, name);
+    }
+
+    // если мы в списке категории
+    else if (currentCategory) {
+        openCategory(currentCategory);
     }
 }
 
