--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@ function renderCategoryContent(category){
     products[category].forEach((item, index) => {
         html += `
         <div class="product-card show"
+     id="card-${item.name.replace(/\s/g, "_")}"
             style="animation-delay: ${index * 0.05}s"
             onclick="openProduct('${category}', '${item.name.replace(/'/g, "\\'")}')">
 
@@ -880,10 +881,59 @@ function changeQty(name, price, delta) {
         openProduct(currentCategory, name);
     }
 
-    // если мы в списке категории — без анимации
-    else if (currentCategory) {
-        const main = document.getElementById("main");
-        main.innerHTML = renderCategoryContent(currentCategory);
+    // если мы в списке категории — обновляем только одну карточку
+else if (currentCategory) {
+
+    const safeName = name.replace(/\s/g, "_");
+    const card = document.getElementById(`card-${safeName}`);
+
+    if (card) {
+
+        const qty = getQty(name);
+
+        const controls = card.querySelector(".qty-control");
+        const addBtn = card.querySelector(".add-btn");
+
+        if (qty === 0) {
+            if (controls) controls.remove();
+
+            if (!addBtn) {
+                card.insertAdjacentHTML("beforeend", `
+                    <button class="add-btn"
+                        onclick="event.stopPropagation(); changeQty('${name}', ${price}, 1)">
+                        Добавить в корзину
+                    </button>
+                `);
+            }
+
+        } else {
+
+            if (addBtn) addBtn.remove();
+
+            if (!controls) {
+                card.insertAdjacentHTML("beforeend", `
+                    <div class="qty-control">
+                        <button class="qty-btn"
+                            onclick="event.stopPropagation(); changeQty('${name}', ${price}, -1)">
+                            −
+                        </button>
+
+                        <span class="qty-number"
+                            id="qty-${safeName}">
+                            ${qty} шт.
+                        </span>
+
+                        <button class="qty-btn"
+                            onclick="event.stopPropagation(); changeQty('${name}', ${price}, 1)">
+                            +
+                        </button>
+                    </div>
+                `);
+            } else {
+                const qtyEl = document.getElementById(`qty-${safeName}`);
+                if (qtyEl) qtyEl.textContent = qty + " шт.";
+            }
+        }
     }
 }
 
