--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@ button {
   cursor:pointer;
 }
 
-#backBtn { background:#444; }
 
 #cartBar{
    position:fixed;
@@ -572,6 +571,25 @@ button {
   opacity: 1;
   transform: scale(1);
   pointer-events: auto;
+}
+  /* ===== КРАСИВАЯ КНОПКА НАЗАД ===== */
+
+#backBtn {
+  background: rgba(255,255,255,0.08);
+  border: none;
+  padding: 8px 14px;
+  border-radius: 14px;
+  color: white;
+  font-size: 14px;
+  font-weight: 500;
+  backdrop-filter: blur(6px);
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+#backBtn:active {
+  transform: scale(0.95);
+  background: rgba(255,255,255,0.15);
 }
 
 </style>
