--- a/index.html
+++ b/index.html
@@ -596,6 +596,36 @@ button {
   transform: scale(0.93);
   box-shadow: 0 3px 10px rgba(255, 77, 109, 0.25);
 }
+  .product-image-box {
+    background: #1c1c1e;
+    border-radius: 18px;
+    padding: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-image-box img {
+    max-width: 100%;
+    max-height: 260px;
+    object-fit: contain;
+}
+  .price-box {
+    background: #1c1c1e;
+    padding: 14px 18px;
+    border-radius: 14px;
+    font-size: 22px;
+    font-weight: 600;
+    color: #ff4d6d;
+    margin-top: 15px;
+    display: inline-block;
+}
+
+.price-box span {
+    font-size: 16px;
+    opacity: 0.8;
+}
 
 </style>
 </head>
@@ -863,10 +893,12 @@ function openProduct(category, productName) {
     <button id="backBtn" onclick="openCategory('${category}')">Назад</button>
 
     <div class="product-details">
-        <img src="${product.image}" 
-             style="width:100%;border-radius:15px;margin-bottom:15px;">
+        
+    <div class="product-image-box">
+        <img src="${product.image}">
+    </div>
 
-        <h2>${product.name}</h2>
+    <h2>${product.name}</h2>
 
         <p style="opacity:0.8;margin:10px 0;">
             ${product.description}
