--- a/index.html
+++ b/index.html
@@ -632,6 +632,9 @@ button {
     margin: 12px 0 18px 0;
     line-height: 1.5;
 }
+  .product-details {
+    padding-bottom: 140px;
+}
 
 </style>
 </head>
