--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,12 @@ if (qtyEl) {
     }
 }
 }
+  function removeFromCart(name) {
+    cart = cart.filter(item => item.name !== name);
+    localStorage.setItem("cart", JSON.stringify(cart));
+    renderCart();
+    updateCartBar();
+}
 function renderCart(){
   let html = `<button id="backBtn" onclick="renderCategories()">← Назад</button>`;
   html += "<h2>Корзина</h2>";
@@ -1028,7 +1034,23 @@ function renderCart(){
     let total = 0;
     cart.forEach(item => {
       total += item.price * item.qty;
-      html += `<p>${item.name} × ${item.qty} — ${item.price * item.qty} ₽</p>`;
+      html += `
+<div class="cart-item">
+    <div class="cart-item-info">
+        <strong>${item.name}</strong>
+        <div class="cart-item-price">
+            ${item.price * item.qty} ₽
+        </div>
+    </div>
+
+    <div class="cart-controls">
+        <button onclick="changeQty('${item.name}', ${item.price}, -1)">−</button>
+        <span>${item.qty}</span>
+        <button onclick="changeQty('${item.name}', ${item.price}, 1)">+</button>
+        <button class="remove-btn" onclick="removeFromCart('${item.name}')">✕</button>
+    </div>
+</div>
+`;
     });
     html += `<hr><h3>Итого: ${total} ₽</h3>`;
     html += `<button onclick="sendOrder()">Оформить заказ</button>`;
